# bookstorage

./: .env.example  Makefile  docker-compose.dev.yaml  docker-compose.e2e.yaml  docker-compose.test.yaml
backend/: Dockerfile  Dockerfile.dev  Dockerfile.e2e  Dockerfile.test  pyproject.toml  pytest.ini  requirements.txt
backend/src/: main.py
backend/src/application/dto/: dto.py
backend/src/application/services/: services.py
backend/src/config/: settings.py
backend/src/domain/: entities.py  repository.py  uow.py  value_objects.py
backend/src/entrypoints/api/: authors.py
backend/src/infrastructure/application/: factory.py
backend/src/infrastructure/database/: repository.py  session.py  tables.py
backend/src/infrastructure/persistence/: repository.py  session.py  tables.py  uow.py
backend/src/presentation/api/: __init__.py  authors.py  books.py
backend/tests/: conftest.py
backend/tests/e2e/: test_api.py
backend/tests/integration/: test_repository.py  test_services.py
backend/tests/unit/: test_database.py  test_entities.py  test_service_layer.py  test_services.py  test_settings.py  test_value_objects.py
backend/tests/unit/common/: fake_repository.py  fake_uow.py
